--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "framer-motion": "^12.0.1",
+    "framer-motion": "^11.18.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "motion": "^12.0.1",
-    "next": "13.5.1",
+    "next": "^15.1.6",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
