--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/fiber": "^8.15.19",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
     "@types/node": "20.6.2",
@@ -63,6 +65,7 @@
     "next": "^15.1.6",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
@@ -70,10 +73,12 @@
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "shadergradient": "^1.3.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.175.0",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
